@@ -22,8 +22,11 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -40,8 +43,8 @@ public class UserService {
 
         return userRepository.findAllByCompany_IdCompany(idCompany)
                 .stream()
-                .map(userMapper::toAdminDTO)
-                .toList();
+                .map(userMapper::toAdminDTO).sorted(Comparator.comparing(UserForAdminDTO::getUserName, Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER)))
+                .collect(Collectors.toList());
     }
 
     public UserSelfDTO getCurrentUserDetails() {
@@ -154,6 +157,5 @@ public class UserService {
         user.setPasswd(passwordEncoder.encode(dto.getNewPassword()));
         userRepository.save(user);
     }
-
 
 }
